[package]
name = "adventofcode2018-reattempt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
lazy_static = "1.4.0"
regex = "1.5.4"
chrono = "0.4.19"

[dev-dependencies]
test-case = "1.2.0"
